welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: type mismatch;
 found   : Int
 required: Boolean
	return (Math.abs(num - (num / 10) * 10) <= 2 || Math.abs(num - ((num / 10) + 1) * 10)) <= 2
                                                                ^